# mini-cc

./: .gitignore  LICENSE  PROMOTION.md  README.md
docs/: 00-outline.md  02-query-engine.md  03-tool-system.md  05-mcp-and-plugins.md  06-ui-and-ink.md  07-optimization-and-deployment.md  08-buddy-easter-egg.md  09-security-and-sandbox.md  10-ultimate-agent-capabilities.md  blog-frontend-design.md
go/: README.md  go.mod  go.sum  main.go
python/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
python/.ai_memory/: global_memory.txt
python/src/: config.py  main.py
python/src/agent/: llm.py  loop.py  memory.py
python/src/core/: agent.py
python/src/core/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
python/src/mini_cc/: main.py
python/src/mini_cc/buddy/: companion.py
python/src/mini_cc/core/: agent.py
python/src/mini_cc/core/providers/: anthropic_provider.py  base.py  openai_provider.py
python/src/mini_cc/tools/: agent_tool.py  file_read.py  git_status_tool.py  mcp_tool.py  registry.py
python/src/mini_cc/tools/security/: bash_security.py
python/src/tools/: __init__.py  base.py  bash.py  bash_tool.py  file_read.py  file_read_tool.py  file_write.py  file_write_tool.py  mcp_tool.py  registry.py
python/src/tools/security/: destructive_warning.py  should_sandbox.py
python/src/utils/: console.py
python/tests/: conftest.py  test_agent.py  test_bash_tool.py  test_file_tools.py  test_memory.py  test_security.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs
rust/src/buddy/: companion.rs  mod.rs
rust/src/core/: agent.rs  mod.rs
rust/src/core/providers/: anthropic_provider.rs  mod.rs  openai_provider.rs
rust/src/tools/: bash_tool.rs  file_tools.rs  mod.rs
(+126 files in other folders)
