[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "you-want-mini-cc"
version = "1.0.1"
description = "A lightweight AI pair programming agent in Python (Compatible with @you-want/mini-cc)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "rain9", email = "developer@example.com"}
]
keywords = ["ai", "agent", "claude", "llm", "cli", "pair-programming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "colorama>=0.4.6"
]

[project.urls]
Homepage = "https://mini-cc.raingpt.top/"
Repository = "https://github.com/you-want/mini-cc"

[project.scripts]
mini-cc = "mini_cc.main:run_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mini_cc*"]
