[package]
name = "minicc"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
dotenv = "0.15.0"
colored = "2.1.0"
futures-util = "0.3.30"
eventsource-stream = "0.2.3"
chrono = "0.4.44"
regex = "1.12.3"
